buyer/static/styles/category.css
.content {
    background-color: rgb(255, 255, 255);
}

.content .assisters {
    position: relative;

    padding-bottom: 20px;
    text-align: center;
    background-color: rgb(242, 242, 242);
    border-bottom: 1px solid rgb(221, 221, 221);
}

.content .assisters .assister {
    display: inline-block;

    vertical-align: top;
    margin-left: 50px;
    margin-right: 50px;
    margin-top: 20px;
}

.content .assisters .assister .header {
    display: flex;

    align-items: center;
    justify-content: center;
}

.content .assisters .assister .header h1 {
    margin: 0px 0px 0px 0px;
    color: rgb(51, 51, 51);
    font-size: 20px;
}

.content .assisters .assister .header img {
    width: 16px;
    height: 16px;

    margin-left: 10px;
    cursor: pointer;
}

.content .assisters .assister hr {
    width: 50%;

    margin-top: 0;
    margin-bottom: 0;
}

.content .assisters .assister h2 {
    margin-top: 3px;
    margin-bottom: 10px;
    font-size: 13px;
    color: rgb(51, 51, 51);
}

.content .assisters .assister button {
    display: block;
    position: relative;
    left: 50%;
    transform: translate(-50%, 0%);
    width: 250px;
    height: 35px;

    margin: 4px 0px 4px 0px;
    background-color: rgb(255, 255, 255);
    font-size: 16px;
    color: rgb(34, 34, 34);
    border-radius: 5px;
}

.content .assisters .assister button:hover {
    background-color: rgb(250, 250, 250);
}

.content .assisters .assister button:active {
    background-color: rgb(250, 250, 250);
}

.content .results {
    position: relative;

    text-align: center;
}

.content .results .header {
    padding: 10px 0px 10px 80px;
    text-align: left;
}

.content .results .header label {
    font-size: 18px;
    margin-right: 10px;
}

.content .results .header select {
    font-size: 17px;
    padding: 5px 10px 5px 10px;
    background-color: rgb(255, 255, 255);
    border-radius: 5px;
    outline: none;
}

.content .results .header option {
    font-size: 17px;
}

.content .results .products {
    position: relative;

    margin: 0px 60px 0px 60px;
}

.content .results .products a {
    color: rgb(32, 32, 32);
    text-decoration: none;
}

.content .results .products .product {
    display: inline-block;
    width: 470px;
    height: 240px;

    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 40px;
    cursor: pointer;
    border: 1px solid rgb(150, 150, 150);
    border-radius: 10px;
}

.content .results .products .product .image-container {
    position: relative;
    float: left;
    width: 50%;
    height: 100%;

    border-radius: 10px;
}

.content .results .products .product .image-container img {
    position: relative;
    top: 50%;
    transform: translate(0%, -50%);
    width: 210px;
}

.content .results .products .product .details {
    position: relative;
    float: left;
    width: calc(50% - 20px);
    height: 100%;

    padding-right: 20px;
    border-radius: 0px 10px 10px 0px;
    background-color: rgb(245, 245, 245);
}

.content .results .products .product .details h1 {
    font-size: 20px;
    margin-bottom: 0px;
    font-weight: normal;
}

.content .results .products .product .details h2 {
    font-size: 15px;
    margin-top: 2px;
    margin-bottom: 3px;
}

.content .results .products .product .details .procon {
    display: flex;
    width: 100%;

    align-items: center;
    justify-content: left;
    margin: 5px;
    margin-left: 15px;
}

.content .results .products .product .details .procon img {
    width: 12px;
    height: 12px;
    padding: 0px;
    top: 0%;
    transform: translate(0%, 0%);
}

.content .results .products .product .details .procon h1 {
    position: relative;
    margin: 0px;
    margin-left: 10px;
    font-size: 16px;
    text-align: left;
}

.content .results .products .product .details hr {
    width: 50%;
}

.content .results .products .product .details .spacer {
    height: 5px;
}

